# linux-codexbar

./: README.md  package-lock.json  package.json
docs/: plan.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  config.rs  lib.rs  main.rs  models.rs
src-tauri/src/providers/: claude.rs  codex.rs  opencode.rs
